--- a/contact-us.html
+++ b/contact-us.html
@@ -34,7 +34,7 @@
     <header class="position-absolute w-100">
         <div class="container">
             <!-- top header -->
-            <!-- <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
+            <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
                 <div class="contact">
                     <a href="tel:+1234567890" class="tel"><i class="fa fa-phone" aria-hidden="true"></i>+1234567890</a>
                     <a href="mailto:info@yourmail.com"><i class="fa fa-envelope"
@@ -48,7 +48,7 @@
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                     </ul>
                 </nav>
-            </div> -->
+            </div>
             
             <!-- navbar -->
             <nav class="navbar navbar-expand-md navbar-light">
@@ -174,7 +174,7 @@
     <!-- Hero End -->
 
     <!-- Call To Action Start -->
-    <!-- <section class="cta" data-aos="fade-up" data-aos-delay="0">
+    <section class="cta" data-aos="fade-up" data-aos-delay="0">
         <div class="container">
             <div class="cta-content d-xl-flex align-items-center justify-content-around text-center text-xl-left">
                 <div class="content" data-aos="fade-right" data-aos-delay="200">
@@ -186,7 +186,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Call To Action End -->
 
     <!-- Services Start -->
@@ -246,7 +246,7 @@
                     </div>
                     <!-- service element end -->
 
-                    <!-- <div class="col-sm-6 col-lg-4">
+                    <div class="col-sm-6 col-lg-4">
                         <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
                             <img class="mr-4" src="assets/images/service3.png" alt="Web Development">
                             <div class="media-body">
@@ -281,7 +281,7 @@
                                 Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </div>
         </div>
@@ -289,7 +289,7 @@
     <!-- Services End -->
 
     <!-- Featured Start -->
-    <!-- <section class="featured">
+    <section class="featured">
         <div class="container">
             <div class="row">
                 <div class="col-md-6" data-aos="fade-right" data-aos-delay="400" data-aos-duration="800">
@@ -327,11 +327,11 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Featured End -->
 
     <!-- Recent Posts Start -->
-    <!-- <section class="recent-posts">
+    <section class="recent-posts">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -394,11 +394,11 @@
                 <a href="#" class="btn btn-primary">See More</a>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Recent Posts End -->
 
     <!-- Trust Start -->
-    <!-- <section class="trust">
+    <section class="trust">
         <div class="container">
             <div class="row">
                 <div class="offset-xl-1 col-xl-6" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800">
@@ -438,11 +438,11 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Trust End -->
 
     <!-- Pricing Start -->
-    <!-- <section class="pricing-table">
+    <section class="pricing-table">
         <div class="container">
             <div class="title text-center">
                 <h6 class="title-primary">Our prices</h6>
@@ -499,14 +499,14 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Pricing End -->
 
     <!-- Testimonial and Clients Start -->
     <section class="testimonial-and-clients">
         <div class="container">
             <!-- testimonials start -->
-            <!-- <div class="testimonials">
+            <div class="testimonials">
                 <div class="swiper-container test-slider">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide text-center">
@@ -578,7 +578,7 @@
                     </div>
                     <div class="test-pagination"></div>
                 </div>
-            </div> -->
+            </div>
             <!-- testimonials end -->
 
             <!-- clients start -->
@@ -617,7 +617,7 @@
     <!-- Testimonial and Clients End -->
 
     <!-- Call To Action 2 Start -->
-    <!-- <section class="cta cta2" data-aos="fade-up" data-aos-delay="0">
+    <section class="cta cta2" data-aos="fade-up" data-aos-delay="0">
         <div class="container">
             <div class="cta-content d-xl-flex align-items-center justify-content-around text-center text-xl-left">
                 <div class="content" data-aos="fade-right" data-aos-delay="200">
@@ -629,7 +629,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Call To Action 2 End -->
 
     <!-- Footer Start -->
@@ -642,9 +642,9 @@
                     <div class="col-md-6 col-xl-3">
                         <div class="single-widget contact-widget" data-aos="fade-up" data-aos-delay="0">
                             <h5 class="widget-tiltle text">Contact Details&nbsp;</h5>
-                            <!-- <p>By subscribing to our mailing list you will always be update with the latest news from
+                            <p>By subscribing to our mailing list you will always be update with the latest news from
                                 us.
-                            </p> -->
+                            </p>
                             <div class="media">
                                 <i class="fa fa-map-marker"></i>
                                 <div class="media-body ml-3">
@@ -680,7 +680,7 @@
                     <!-- contact details end -->
 
                     <!-- tweeter widget -->
-                    <!-- <div class="col-md-6 col-xl-3">
+                    <div class="col-md-6 col-xl-3">
                         <div class="single-widget twitter-widget" data-aos="fade-up" data-aos-delay="200">
                             <h6 class="widget-tiltle">Fresh Tweets</h6>
                             <div class="media">
@@ -713,10 +713,10 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
 
                     <!-- latest updates -->
-                    <!-- <div class="col-md-6 col-xl-3">
+                    <div class="col-md-6 col-xl-3">
                         <div class="single-widget recent-post-widget" data-aos="fade-up" data-aos-delay="400">
                             <h6 class="widget-tiltle">Latest Updates</h6>
                             <div class="media">
@@ -752,11 +752,11 @@
                                 </div>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
 
                     <!-- popular tags and subscribe -->
                     <div class="col-md-6 col-xl-3">
-                        <!-- <div class="single-widget tags-widget" data-aos="fade-up" data-aos-delay="800">
+                        <div class="single-widget tags-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Popular Tags</h6>
                             <a href="#">Amazing</a>
                             <a href="#">Design</a>
@@ -764,12 +764,12 @@
                             <a href="#">Art</a>
                             <a href="#">Wordpress</a>
                             <a href="#">jQuery</a>
-                        </div> -->
+                        </div>
 
                         <!-- subscribe and social -->
                         <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">
                             <h6 class="widget-tiltle">Social Media Handles</h6>
-                        <!--<p>Sign up for our mailing list to get latest updates and offers</p>
+                        <p>Sign up for our mailing list to get latest updates and offers</p>
                             <form class="" method="get">
                                 <div class="input-group">
                                     <input class="field form-control" name="subscribe" type="email"
@@ -780,7 +780,7 @@
                                 </div>
                             </form>
                             <p>We respect your privacy</p>
-                             -->
+                            
                             <ul class="nav social-nav">
                                 <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
