contact us done

--- a/products-services.html
+++ b/products-services.html
@@ -684,6 +684,8 @@
                             <!-- <p>By subscribing to our mailing list you will always be update with the latest news from
                                 us.
                             </p> -->
+
+                            <!-- address -->
                             <div class="media">
                                 <i class="fa fa-map-marker"></i>
                                 <div class="media-body ml-3">
@@ -693,6 +695,7 @@
                                     PMB South Africa
                                 </div>
                             </div>
+                            <!-- email -->
                             <div class="media">
                                 <i class="fa fa-envelope-o"></i>
                                 <div class="media-body ml-3">
@@ -700,6 +703,7 @@
                                     <a href="mailto:support@companydomain.com">Support@companydomain.com</a>
                                 </div>
                             </div>
+                            <!-- tell -->
                             <div class="media">
                                 <i class="fa fa-phone"></i>
                                 <div class="media-body ml-3">
@@ -707,6 +711,7 @@
                                     <a href="tel:+27333860596"> (+27) 33 386 0596</a>
                                 </div>
                             </div>
+                            <!-- fax -->
                             <div class="media">
                                 <i class="fa fa-fax"></i>
                                 <div class="media-body ml-3">
