activated netlify forms

--- a/contact-us.html
+++ b/contact-us.html
@@ -192,7 +192,7 @@
 
                     <div class="container contact-form single-widget subscribe-widget bg-light mt-5">
                         <h3 class="text-center text-info py-3" >Leave Us A Messeage</h3>
-                        <form class="row" method="get">
+                        <form class="row" netlify >
                             <div class="input-group col-md-6 my-1">
                                 <input class="field form-control" name="name" type="text" placeholder="Your Name">
                             </div>
