done most of the hoe page touch ups, missing dropdown and linking a few pages

--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <nav class="navbar navbar-expand-md navbar-light">
 
                 <!-- image logo -->
-                <!-- <a class="navbar-brand" href="index.html"><img src="assets/images/logo.jpeg" alt="Multipurpose"></a> -->
+                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
                 
                 <!-- text company name -->
-                <a class="navbar-brand" href="index.html"><h2>Quality Designs</h2></a>
+                <!-- <a class="navbar-brand" href="index.html"><h2>Quality Designs</h2></a> -->
 
                 <!-- navbar toggler on small screens -->
                 <div class="group d-flex align-items-center">
@@ -141,7 +141,7 @@
     <!-- Hero End -->
 
     <!-- Services Start -->
-    <section class="services py-4">
+    <section class="services py-3">
         <div class="container">
             <!-- services header -->
             <div class="title text-center">
@@ -229,7 +229,7 @@
                 <!-- clients header -->
                 <div class="title text-center">
                     <!-- <h6>Our Speakers</h6> -->
-                    <h1 class="title-blue">Our Partners</h1>
+                    <h1 class="title-orange">Our Partners</h1>
                 </div>
 
                 <!-- clients  -->
@@ -265,64 +265,75 @@
         <div class="footer-widgets py-5">
             <div class="container">
                 <div class="row">
-                    <!-- contact details start -->
-                    <div class="col-md-6 col-xl-3">
-                        <div class="single-widget contact-widget" data-aos="fade-up" data-aos-delay="0">
-                            <h5 class="widget-tiltle text">Contact Details&nbsp;</h5>
-
-                            <div class="media">
-                                <i class="fa fa-map-marker"></i>
-                                <div class="media-body ml-3">
-                                    <h6>Address</h6>
-                                    11 Ridge Road,<br>
-                                    Scottsville 3201 <br>
-                                    PMB South Africa
-                                </div>
-                            </div>
-                            <div class="media">
-                                <i class="fa fa-envelope-o"></i>
-                                <div class="media-body ml-3">
-                                    <h6>Email</h6>
-                                    <a href="mailto:support@companydomain.com">Support@companydomain.com</a>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <i class="fa fa-phone"></i>
-                                <div class="media-body ml-3">
-                                    <h6>Tell</h6>
-                                    <a href="tel:+27333860596"> (+27) 33 386 0596</a>
-                                </div>
-                            </div>
-                            <div class="media">
-                                <i class="fa fa-fax"></i>
-                                <div class="media-body ml-3">
-                                    <h6>Fax</h6>
-                                    <a href="fax:0333860596">(+27) 33 386 0596</a>
-                                </div>
-                            </div>
+                    <!-- short about -->
+                    <div class="col-lg-3">
+                        <div class="single-widget contact-widget text-white">
+                            <img src="assets/images/logo.jpeg" alt="" class="" width="200" height="60">
+                            <p class="mt-3">
+                                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maxime fugiat, temporibus provident ipsum blanditiis non delectus, iusto expedita molestias, repudiandae accusantium hic aliquam voluptates commodi in quasi eius inventore ut.
+                            </p>
+                            <h5><a href="about.html" class="text-primary">Read More</a></h5>
                         </div>
                     </div>
-                    <!-- contact details end -->
 
-                    <!-- popular tags and subscribe -->
-                    <div class="col-md-6 col-xl-3">
+                    <!-- services -->
+                    <div class="col-lg-3">
+                        <div class="single-widget contact-widget text-white">
+                            <h5>Services</h5>
+                            <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
+                                <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><h5 class="mb-0">Consulting</h5></li>
+                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Strategy and Operations</a></li>
+                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Technology Consulting</a></li>
+                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Project Management Services</a></li>
+                                <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><h5 class="mb-0">Digital Solutions</h5></li>
+                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Customer Relationship Management</a></li>
+                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Electronic Content Management</a></li>
+                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Real Estate Management System</a></li>
+                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Custom Application Development</a></li>
+                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Project Portfolio Management</a></li>
+                                    <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white">Web and Mobile Apllications</a></li>
 
-                        <!-- subscribe and social -->
-                        <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">
-                            <h6 class="widget-tiltle">Social Media Handles</h6>
+                            </ul>
+                        </div>
+                    </div>
 
-                            <ul class="nav social-nav">
-                                <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                    <!-- links -->
+                    <div class="col-lg-3">
+                        <div class="single-widget contact-widget text-white">
+                            <h5>Usefull Links</h5>
+                            <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
+                                <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white" href="products-services.html">services</a class="text-white"></li>
+                                <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white" href="vecancies.html">Available Vacancies</a></li>
+                                <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white" href="about.html">Our Leadership</a></li>
+                                <li class="list-group-item py-1 pl-4" style="background-color: #FF9D00; border: none;"><a class="text-white" href="about.html">About Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+
+                    <!-- contact details -->
+                    <div class="col-lg-3">
+                        <div class="single-widget contact-widget text-white">
+                            <h5>Contact Us</h5>
+                            <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
+                                <li class="list-group-item pb-0 pl-2" style="background-color: #FF9D00; border: none;"><h5><i class="fa fa-map-marker mr-2"></i>Physical Address</h5></li>
+                                    <li class="list-group-item py-0 pl-5" style="background-color: #FF9D00; border: none;"><p>11 Ridge Road <br> Scottsville 3201 <br> PMB South Africa</h5></li>
+                                <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;"><h5><i class="fa fa-envelope-o mr-2"></i>Email</h5></li>
+                                    <li class="list-group-item py-0 pl-5" style="background-color: #FF9D00; border: none;"><a href="mailto:support@companydomain.com" class="text-white">Support@companydomain.com</a></li>
+                                <li class="list-group-item pl-0 pb-0" style="background-color: #FF9D00; border: none;"><h5><i class="fa fa-phone mr-2"></i>Tell</h5></li>
+                                    <li class="list-group-item py-0 pl-5" style="background-color: #FF9D00; border: none;"><a class="text-white" href="tel:+27333860596"> (+27) 33 386 0596</a></li>
                             </ul>
 
-                            <!-- google map -->
-                            <div class="googlemaps-area embed-responsive embed-responsive-16by9 my-3 py-2 ">
-                                <iframe class="w-100 h-100" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3468.423629430679!2d30.39612821468372!3d-29.62043701864389!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x1ef6bc52e27f3137%3A0x6dd6d60dba158838!2s11%20Ridge%20Rd%2C%20Scottsville%2C%20Pietermaritzburg%2C%203201!5e0!3m2!1sen!2sza!4v1578755195464!5m2!1sen!2sza" width="600" height="900" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                            <!-- social Icons -->
+                            <div class="single-widget subscribe-widget" data-aos="fade-up" data-aos-delay="800">    
+                                <ul class="nav social-nav">
+                                    <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                </ul>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
