--- a/index.html
+++ b/index.html
@@ -34,8 +34,34 @@
     <!-- Header Start -->
     <header class="position-absolute w-100">
         <div class="container">
+            <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
+                <div class="contact">
+                    <a href="tel:+27333860596" class="tel"><i class="fa fa-phone" aria-hidden="true"></i>(+27) 33 386 0596</a>
+                    <a href="mailto:Support@companydomain.com"><i class="fa fa-envelope"
+                            aria-hidden="true"></i>Support@companydomain.com</a>
+                </div>
+                <nav class="d-flex aic">
+                    <!-- <a class="search-icon d-none d-md-block" href="#"><i class="fa fa-search"></i></a> -->
+                    <form class="bg-white search-form" method="get" id="searchform">
+                        <div class="input-group">
+                            <input class="field form-control pl-2" id="s" name="s" type="text" placeholder="Search">
+                            <span class="input-group-btn">
+                                <input class="submit btn btn-sm btn-primary h-100" id="searchsubmit" name="submit" type="submit"
+                                    value="Search">
+                            </span>
+                        </div>
+                    </form>
+
+                    <!-- <a href="#" class="login"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
+                    <ul class="nav social d-none d-md-flex">
+                        <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
+                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                    </ul> -->
+                </nav>
+            </div>
             <!-- navbar -->
-            <nav class="navbar navbar-expand-md navbar-light">
+            <nav class="navbar navbar-expand-md navbar-light py-0">
 
                 <!-- image logo -->
                 <a class="navbar-brand" href="index.html"><img src="assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
