done with index, moving to about

--- a/index.html
+++ b/index.html
@@ -188,7 +188,12 @@
                     </div>
 
                     <!-- about text -->
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi placeat suscipit amet totam magni sequi inventore eum similique molestias esse aperiam quo, beatae iusto? Minima, modi dolore suscipit voluptate tempora nisi libero reiciendis sapiente dignissimos excepturi explicabo quo rerum laboriosam dolores debitis ullam cupiditate vitae ut animi a quibusdam corporis.
+                    <p>
+                        Quality designs (QD) - a leading-edge software provider and IT services, to develop
+                        efficient and effective solutions that keep businesses one-step ahead. We offer strategy,
+                        consulting, development, support and technical services to enhance digital business,
+                        workplace productivity, and customer experience through the effective use and adoption
+                        of technology.
                     </p>
                     <a href="about.html" class="btn btn-primary mt-0">Read More</a>
                 </div>
@@ -216,6 +221,7 @@
             <!-- services body -->
             <div class="container">
                 <div class="row">
+                    
                     <!-- service element Start -->
                     <div class="col-sm-6 col-lg-4 ">
                         <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
@@ -268,6 +274,47 @@
                         </div>
                     </div>
                     <!-- service element end -->
+
+                    <!-- Cloud Services element Start -->
+                    <div class="col-sm-6 col-lg-6">
+                        <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                            <!-- <img class="mr-4" src="assets/images/service1.png" alt="Web Development"> -->
+                            <div class="media-body">
+                                <!-- service group title -->
+                                <h5>Cloud Services</h5>
+
+                                <!-- service group description -->
+                                Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
+                                
+                                <!-- services list -->
+                                <div class="card">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service1.png" alt="Web Development"> Infrastructure As A Service</li>
+                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service2.png" alt="Web Development"> Software As A Service</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Cloud Services element end -->
+
+                    <!-- Devices element Start -->
+                    <div class="col-sm-6 col-lg-6">
+                        <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
+                            <!-- <img class="mr-4" src="assets/images/service2.png" alt="Web Development"> -->
+                            <div class="media-body">
+                                <h5>Devices</h5>
+                                Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
+                                <div class="card">
+                                    <ul class="list-group list-group-flush">
+                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service4.png" alt="Web Development"> Push To Talk</li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Devices element end -->
+
                 </div>
             </div>
         </div>
