--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
                               Solutions and Services
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item" href="products-services.html">Solutions and Services</a>
+                              <div class="dropdown-divider"></div>
                               <a class="dropdown-item" href="products-services.html#consulting">Consulting</a>
                               <a class="dropdown-item" href="products-services.html#digital-solutions">Digital Solutions</a>
                               <a class="dropdown-item" href="products-services.html#cloud-services">Cloud Services</a>
@@ -95,6 +97,16 @@
                         <li class="nav-item"><a class="nav-link" href="./industries.html">Industries</a></li>
                         <li class="nav-item"><a class="nav-link" href="./contact-us.html">Contact Us</a></li>
                     </ul>
+
+                    <form class="bg-white search-form mb-3" method="get" id="searchform">
+                        <div class="input-group">
+                            <input class="field form-control" id="s" name="s" type="text" placeholder="Search">
+                            <span class="input-group-btn">
+                                <input class="submit btn btn-primary" id="searchsubmit" name="submit" type="submit"
+                                    value="Search">
+                            </span>
+                        </div>
+                    </form>
                 </div>
             </nav>
         </div>
