--- a/industries.html
+++ b/industries.html
@@ -113,6 +113,114 @@
         </div>
     </header>
     <!-- Header End -->
+
+    <!-- Industry Services Start -->
+    <section class="services">
+        <div class="container mt-5 pt-5">
+            <div class="title text-center">
+                <!-- <h6>Our Speakers</h6> -->
+                <h1 class="title-orange">Industry</h1>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <!-- Banking Financial Services & Insurance -->
+                    <div class="col-lg-12">
+                        <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                            <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
+                            <div class="media-body">
+                                <h5 class=" title-orange">Banking Financial Services & Insurance</h5>
+                                <p>
+                                    Quality Designs plays a huge role in financial services for many different reasons, but most
+                                    importantly on the electronic networks that exchange information. Information technology you
+                                    must look at the entire global financial systems in place which allow this type of technology to
+                                    thrive and function at an entire global level. South Africa’s leading software houses and has
+                                    specialised in the design, development and deployment of software solutions for financial
+                                    professionals for more than 11 years
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Retail, Consumer Packaged Goods, Transportation -->
+                    <div class="col-lg-12">
+                        <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
+                            <img class="mr-4" src="assets/images/service2.png" alt="Web Development">
+                            <div class="media-body">
+                                <h5 class=" title-orange">Retail, Consumer Packaged Goods, Transportation</h5>
+                                <p>
+                                    Quality Designs IT spending increased over the past decade, Managers concentrated on
+                                    standardizing IT systems across the company and reducing costs. Technology programs
+                                    delivered on consolidating and integrating systems following mergers and acquisitions.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Government Sector -->
+                    <div class="col-lg-12">
+                        <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
+                            <img class="mr-4" src="assets/images/service3.png" alt="Web Development">
+                            <div class="media-body">
+                                <h5 class=" title-orange">Government Sector</h5>
+                                <p>
+                                    Quality designs placed to support government’s four-pronged “e-Government” strategy of
+                                    digital readiness, digital development, building the digital future and creating digital
+                                    opportunities.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Healthcare, Life Science & Services -->
+                    <div class="col-lg-12">
+                        <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
+                            <img class="mr-4" src="assets/images/service4.png" alt="Web Development">
+                            <div class="media-body">
+                                <h5 class=" title-orange">Healthcare, Life Science & Services</h5>
+                                <p>
+                                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quia nesciunt quae autem saepe cum, illum sit modi sapiente accusamus assumenda officia tenetur deserunt minima, natus voluptate? Saepe aperiam incidunt quod.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Energy, Natural Resources Utilities and Engineering & Construction -->
+                    <div class="col-lg-12">
+                        <div class="media" data-aos="fade-up" data-aos-delay="400" data-aos-duration="600">
+                            <img class="mr-4" src="assets/images/service1.png" alt="Web Development">
+                            <div class="media-body">
+                                <h5 class=" title-orange">Energy, Natural Resources Utilities and Engineering & Construction</h5>
+                                <p>
+                                    Quality Designs has designed Drought Status and Management information system is
+                                    designed to provide regular overview and outlook of drought status in South Africa. The
+                                    Drought Status and Management dashboard currently integrates rainfall, river flow, dam level
+                                    and groundwater level data as the main indicators for generating drought status information
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Graphic Design, Printing, Corporate Branding & Advertising -->
+                    <div class="col-lg-12">
+                        <div class="media" data-aos="fade-up" data-aos-delay="600" data-aos-duration="800">
+                            <img class="mr-4" src="assets/images/service5.png" alt="Web Development">
+                            <div class="media-body">
+                                <h5 class=" title-orange">Graphic Design, Printing, Corporate Branding & Advertising</h5>
+                                <p>
+                                    Quality Designs has graphic designers have been designing logos, trademarks and more for
+                                    over 10 years and offer high-quality value for money design and print services.
+                                    Professional Design and Printing Services for your Brand Equity. A well branded business can
+                                    increase the value of a company, helping retain and gain customers. Essentially, a brand is the
+                                    full perception of a business's customer service, advertising, reputation and logo
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- Industry Services End -->
     
     <!-- Footer Start -->
     <footer>
