starting contact us page

--- a/index.html
+++ b/index.html
@@ -32,23 +32,21 @@
     </div>
     <!-- Loader End -->
     <!-- Header Start -->
-    <header class="position-absolute w-100">
-        <div class="container">
-            <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
-                <div class="contact">
-                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone" aria-hidden="true"></i>(+27) 31 266 1790</a>
-                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope" aria-hidden="true"></i>info@qualitydesigns.africa</a>
-                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users"></i> Careers</a>
-                </div>
-                <nav class="d-flex aic">
+    <header class="position-absolute w-100 bg-white container-fluid p-0">
+        <div class="">
+            <!-- top header -->
+            <div class=" bg-primary">
+                <div class="container top-header d-none d-sm-flex justify-content-between align-items-center">
+                <!-- left -->
+                <nav class="d-flex aic py-1">
                     <!-- <a class="search-icon d-none d-md-block" href="#"><i class="fa fa-search"></i></a> -->
                     <form class="bg-white search-form" method="get" id="searchform">
                         <div class="input-group">
-                            <input class="field form-control pl-2" id="s" name="s" type="text" placeholder="Search">
                             <span class="input-group-btn">
                                 <input class="submit btn btn-sm btn-primary h-100" id="searchsubmit" name="submit" type="submit"
                                     value="Search">
                             </span>
+                            <input class="field form-control pl-2" id="s" name="s" type="text" placeholder="Search">
                         </div>
                     </form>
 
@@ -59,9 +57,18 @@
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                     </ul> -->
                 </nav>
+
+                <!-- right -->
+                <div class="contact">
+                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone" aria-hidden="true"></i>(+27) 31 266 1790</a>
+                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope" aria-hidden="true"></i>info@qualitydesigns.africa</a>
+                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users"></i> Careers</a>
+                </div>
+                </div>
+
             </div>
             <!-- navbar -->
-            <nav class="navbar navbar-expand-md navbar-light py-0">
+            <nav class="container navbar navbar-expand-md navbar-light bg-white text-black w-100 py-0">
 
                 <!-- image logo -->
                 <a class="navbar-brand" href="index.html"><img src="assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
@@ -77,25 +84,25 @@
 
                 <!-- collapsable nav -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./about.html">About Us</a></li>
-                        <!-- <li class="nav-item"><a class="nav-link" href="./products-services.html">Products & Services</a></li> -->
+                    <ul class="navbar-nav ">
+                        <li class="nav-item"><a class="nav-link text-primary" href="./index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-primary" href="./about.html">About Us</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link text-primary" href="./products-services.html">Products & Services</a></li> -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link text-primary dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                               Solutions and Services
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                              <a class="dropdown-item" href="products-services.html">Solutions and Services</a>
+                            <div class="dropdown-menu text-primary" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item bold text-primary" href="products-services.html">Solutions and Services</a>
                               <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="products-services.html#consulting">Consulting</a>
-                              <a class="dropdown-item" href="products-services.html#digital-solutions">Digital Solutions</a>
-                              <a class="dropdown-item" href="products-services.html#cloud-services">Cloud Services</a>
-                              <a class="dropdown-item" href="products-services.html#devices">Devices</a>
+                              <a class="dropdown-item text-primary" href="products-services.html#consulting">Consulting</a>
+                              <a class="dropdown-item text-primary" href="products-services.html#digital-solutions">Digital Solutions</a>
+                              <a class="dropdown-item text-primary" href="products-services.html#cloud-services">Cloud Services</a>
+                              <a class="dropdown-item text-primary" href="products-services.html#devices">Devices</a>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="./industries.html">Industries</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contact-us.html">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link text-primary" href="./industries.html">Industries</a></li>
+                        <li class="nav-item"><a class="nav-link text-primary" href="./contact-us.html">Contact Us</a></li>
                     </ul>
 
                     <form class="bg-white search-form mb-3" method="get" id="searchform">
@@ -233,7 +240,7 @@
             <!-- services body -->
             <div class="container">
                 <div class="row">
-                    
+     
                     <!-- service element Start -->
                     <div class="col-sm-6 col-lg-4 ">
                         <div class="media" data-aos="fade-up" data-aos-delay="200" data-aos-duration="400">
@@ -249,9 +256,9 @@
                                 <!-- services list -->
                                 <div class="card" style="border-left: 0px; border-right: 0px; border-bottom: 0px;" >
                                     <ul class="list-group list-group-flush">
-                                      <li class="list-group-item"><img class="mr-4" src="assets/images/service1.png" alt="Web Development"> Strategy and Operations</li>
-                                      <li class="list-group-item"><img class="mr-4" src="assets/images/service2.png" alt="Web Development"> Technology Consulting</li>
-                                      <li class="list-group-item"><img class="mr-4" src="assets/images/service3.png" alt="Web Development"> Project Management Services</li>
+                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service1.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#strategy-and-operations">Strategy and Operations</a> </li>
+                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service2.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#technology-consulting">Technology Consulting</a> </li>
+                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service3.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#project-management-services">Project Management Services</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -269,16 +276,20 @@
                                 <div class="card" style="border-bottom: 0px;">
                                     <ul class="list-group list-group-flush " style="flex-direction: row1;">
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="" src="assets/images/services icons/crm.png" alt="Customer Relationship Management"> Customer Relationship Management</li>
-                                            <li class="list-group-item col-lg-6" style="border-top: 0px;"><img width="49" height="49" class="mr-2" src="assets/images/services icons/custom app dev.png" alt="Custom Application Development"> Custom Application Development</li>
+                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="" src="assets/images/services icons/crm.png" alt="Customer Relationship Management"> <a class="text-secondary" href="./products-services.html#customer-relationship-management">Customer Relationship Management</a> </li>
+                                            <li class="list-group-item col-lg-6" style="border-top: 0px;"><img width="49" height="49" class="mr-2" src="assets/images/services icons/custom app dev.png" alt="Custom Application Development"> <a class="text-secondary" href="./products-services.html#custom-application-development">Custom Application Development</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> Electronic Content Management</li>
-                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ppm.png" alt="Project Portfolio Management"> Project Portfolio Management</li>
+                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="./products-services.html#electronic-content-management">Electronic Content Management</a> </li>
+                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="./products-services.html#project-portfolio-management">Project Portfolio Management</a> </li>
                                         </div>
                                         <div class="row mb-1">
-                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/real estate.png" alt="Real Estate Management System"> Real Estate Management System</li>
-                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/web & mobile.png" alt="Web and Mobile Apllications"> Web and Mobile Apllications</li>
+                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/ecm.png" alt="Electronic Content Management"> <a class="text-secondary" href="./products-services.html#eprocurement">eProcurement</a> </li>
+                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/ppm.png" alt="Project Portfolio Management"> <a class="text-secondary" href="./products-services.html#enterprise-resource-planning">Enterprise Resource Planning</a> </li>
+                                        </div>
+                                        <div class="row mb-1">
+                                            <li class="list-group-item col-lg-6"><img width="49" height="49" class="mr-2" src="assets/images/services icons/real estate.png" alt="Real Estate Management System"> <a class="text-secondary" href="./products-services.html#real-estate-management-system"> Real Estate Management System</a></li>
+                                            <li class="list-group-item col-lg-6" style="border-top: 0px;" ><img width="49" height="49" class="mr-2" src="assets/images/services icons/web & mobile.png" alt="Web and Mobile Apllications"> <a class="text-secondary" href="./products-services.html#web-and-mobile-applications">Web and Mobile Apllications</a> </li>
                                         </div>
                                     </ul>
                                 </div>
@@ -301,8 +312,8 @@
                                 <!-- services list -->
                                 <div class="card">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service1.png" alt="Web Development"> Infrastructure As A Service</li>
-                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service2.png" alt="Web Development"> Software As A Service</li>
+                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service1.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#infrastructure-as-a-service">Infrastructure As A Service</a> </li>
+                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service2.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#software-as-a-service">Software As A Service</a> </li>
                                     </ul>
                                 </div>
                             </div>
@@ -319,14 +330,13 @@
                                 Donec volutpat tincidunt neque, vitae lobortis libero mattis sed tempus.
                                 <div class="card">
                                     <ul class="list-group list-group-flush">
-                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service4.png" alt="Web Development"> Push To Talk</li>
+                                        <li class="list-group-item"><img class="mr-4" src="assets/images/service4.png" alt="Web Development"> <a class="text-secondary" href="./products-services.html#push-to-talk">Push To Talk</a> </li>
                                     </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <!-- Devices element end -->
-
                 </div>
             </div>
         </div>
