--- a/vecancies.html
+++ b/vecancies.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <!-- Document title -->
-    <title>Quality Designs | Home</title>
+    <title>Quality Designs | Careers </title>
     <!-- Stylesheets & Fonts -->
     <!-- Google Fonts -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i%7CRajdhani:400,600,700" rel="stylesheet"> -->
@@ -33,23 +33,21 @@
     </div>
     <!-- Loader End -->
     <!-- Header Start -->
-    <header class="position-absolute w-100">
-        <div class="container">
-            <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
-                <div class="contact">
-                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone" aria-hidden="true"></i>(+27) 31 266 1790</a>
-                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope" aria-hidden="true"></i>info@qualitydesigns.africa</a>
-                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users"></i> Careers</a>
-                </div>
-                <nav class="d-flex aic">
+    <header class="position-absolute w-100 bg-white container-fluid p-0">
+        <div class="">
+            <!-- top header -->
+            <div class=" bg-primary">
+                <div class="container top-header d-none d-sm-flex justify-content-between align-items-center">
+                <!-- left -->
+                <nav class="d-flex aic py-1">
                     <!-- <a class="search-icon d-none d-md-block" href="#"><i class="fa fa-search"></i></a> -->
                     <form class="bg-white search-form" method="get" id="searchform">
                         <div class="input-group">
-                            <input class="field form-control pl-2" id="s" name="s" type="text" placeholder="Search">
                             <span class="input-group-btn">
                                 <input class="submit btn btn-sm btn-primary h-100" id="searchsubmit" name="submit" type="submit"
                                     value="Search">
                             </span>
+                            <input class="field form-control pl-2" id="s" name="s" type="text" placeholder="Search">
                         </div>
                     </form>
 
@@ -60,9 +58,18 @@
                         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
                     </ul> -->
                 </nav>
+
+                <!-- right -->
+                <div class="contact">
+                    <a href="tel:+27312661790" class="tel mr-3"><i class="fa fa-phone" aria-hidden="true"></i>(+27) 31 266 1790</a>
+                    <a href="mailto:Support@companydomain.com" class="mr-3"><i class="fa fa-envelope" aria-hidden="true"></i>info@qualitydesigns.africa</a>
+                    <a href="vecancies.html" class="mr-3"> <i class="fa fa-users"></i> Careers</a>
+                </div>
+                </div>
+
             </div>
             <!-- navbar -->
-            <nav class="navbar navbar-expand-md navbar-light py-0">
+            <nav class="container navbar navbar-expand-md navbar-light bg-white text-black w-100 py-0">
 
                 <!-- image logo -->
                 <a class="navbar-brand" href="index.html"><img src="assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
@@ -78,25 +85,25 @@
 
                 <!-- collapsable nav -->
                 <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="./index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./about.html">About Us</a></li>
-                        <!-- <li class="nav-item"><a class="nav-link" href="./products-services.html">Products & Services</a></li> -->
+                    <ul class="navbar-nav ">
+                        <li class="nav-item"><a class="nav-link text-primary" href="./index.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link text-primary" href="./about.html">About Us</a></li>
+                        <!-- <li class="nav-item"><a class="nav-link text-primary" href="./products-services.html">Products & Services</a></li> -->
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Solutions and Services
+                            <a class="nav-link text-primary dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                              Solutions and Services
                             </a>
-                            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="products-services.html">Solutions and Services</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="products-services.html#consulting">Consulting</a>
-                                <a class="dropdown-item" href="products-services.html#digital-solutions">Digital Solutions</a>
-                                <a class="dropdown-item" href="products-services.html#cloud-services">Cloud Services</a>
-                                <a class="dropdown-item" href="products-services.html#devices">Devices</a>
+                            <div class="dropdown-menu text-primary" aria-labelledby="navbarDropdown">
+                              <a class="dropdown-item bold text-primary" href="products-services.html">Solutions and Services</a>
+                              <div class="dropdown-divider"></div>
+                              <a class="dropdown-item text-primary" href="products-services.html#consulting">Consulting</a>
+                              <a class="dropdown-item text-primary" href="products-services.html#digital-solutions">Digital Solutions</a>
+                              <a class="dropdown-item text-primary" href="products-services.html#cloud-services">Cloud Services</a>
+                              <a class="dropdown-item text-primary" href="products-services.html#devices">Devices</a>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link" href="./industries.html">Industries</a></li>
-                        <li class="nav-item"><a class="nav-link" href="./contact-us.html">Contact Us</a></li>
+                        <li class="nav-item"><a class="nav-link text-primary" href="./industries.html">Industries</a></li>
+                        <li class="nav-item"><a class="nav-link text-primary" href="./contact-us.html">Contact Us</a></li>
                     </ul>
 
                     <form class="bg-white search-form mb-3" method="get" id="searchform">
